--- a/hello_tomcat/mysql-rc.yaml
+++ b/hello_tomcat/mysql-rc.yaml
@@ -17,5 +17,5 @@ spec:                         # 定义此资源对象的相关属性
         ports:
         - containerPort: 3306 # 容器暴露的端口号
         env:                  # 注入到容器内的环境变量
-        - name: MYSL_ROOT_PASSWORD
+        - name: MYSQL_ROOT_PASSWORD
           value: "123456"
