--- a/hello_tomcat/myweb-rc.yaml
+++ b/hello_tomcat/myweb-rc.yaml
@@ -1,3 +1,4 @@
+apiVersion: v1
 kind: ReplicationController
 metadata:
   name: myweb   # RC的名称，全局唯一
@@ -9,7 +10,7 @@ spec:
     metadata:
       labels:
         app: myweb  # Pod副本拥有的标签，必须严格对应上面RC的selector
-    sepc:
+    spec:
       containers:
       - name: myweb # 容器名称
         image: kubeguide/tomcat-app:v1  # 容器对应的docker image
